# llm-eval-test

./: .pre-commit-config.yaml  README.md  pylock.toml  pyproject.toml  requirements.txt
llm_eval_test/: __main__.py  lm_eval_wrapper.py  parser.py
llm_eval_test/benchmarks/catalog/cards/: mbppplus.json
llm_eval_test/benchmarks/catalog/cards/mmlu/: all.json
llm_eval_test/benchmarks/catalog/cards/mmlu_pro/: all.json
llm_eval_test/benchmarks/catalog/tasks/qa/multiple_choice/: with_topic.json
llm_eval_test/benchmarks/tasks/: mmlu_pro_law.yaml
llm_eval_test/benchmarks/tasks/_common/: README.md
llm_eval_test/benchmarks/tasks/mbpp/: mbpp.yaml  mbpplus.yaml  task.py  unitxt
llm_eval_test/benchmarks/tasks/mmlu/: mmlu.yaml
llm_eval_test/benchmarks/tasks/mmlu_pro/: mmlu_pro_all.yaml  mmlu_pro_biology.yaml  mmlu_pro_business.yaml  mmlu_pro_chemistry.yaml  mmlu_pro_computer_science.yaml  mmlu_pro_economics.yaml  mmlu_pro_engineering.yaml  mmlu_pro_health.yaml  mmlu_pro_history.yaml  mmlu_pro_law.yaml  mmlu_pro_math.yaml  mmlu_pro_other.yaml  mmlu_pro_philosophy.yaml  mmlu_pro_physics.yaml  mmlu_pro_psychology.yaml
perf_llm_eval/: __main__.py  eval_bench.py  lm_eval_wrapper.py  parser.py
perf_llm_eval/benchmarks/tasks/: mmlu_pro_business.yaml  mmlu_pro_chemistry.yaml  mmlu_pro_computer_science.yaml  mmlu_pro_economics.yaml  mmlu_pro_math.yaml  mmlu_pro_other.yaml  mmlu_pro_physics.yaml
perf_llm_eval/lm_eval/catalog/cards/mmlu_pro/: some.json
perf_llm_eval/lm_eval/tasks/: _mmlu_pro.yaml  mmlu_pro_all.yaml  mmlu_pro_engineering.yaml  mmlu_pro_philosophy.yaml  mmlu_pro_some.yaml  task.py  unitxt
perf_llm_eval/unitxt/metric/: metric.py
perf_llm_eval/wrappers/unitxt/data/: data.py
src/llm_eval_test/: __main__.py  downloader.py  lm_eval_wrapper.py  parser.py
src/llm_eval_test/benchmarks/tasks/mmlu/: mmlu.yaml
src/llm_eval_test/benchmarks/tasks/mmlu_pro/: mmlu_pro_computer_science.yaml  mmlu_pro_engineering.yaml  mmlu_pro_health.yaml  mmlu_pro_history.yaml  mmlu_pro_other.yaml  mmlu_pro_psychology.yaml
src/llm_eval_test/wrappers/unitxt/data/: data.py
src/llm_eval_test/wrappers/unitxt/metric/: metric.py
