[project]
name = "llm-eval-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Monson", email = "smonson@redhat.com"},
]
dependencies = [
    "lm-eval[api] @ git+https://github.com/EleutherAI/lm-evaluation-harness@57272b63b4c2c7b60e9d2c5fef66b251bb8742ef",
    "unitxt==1.14.0",
    "torch>=1.8",
]
requires-python = "<4.0,>=3.9"
readme = "README.md"

# Use cpu pytorch to avoid downloading cuda
[[tool.pdm.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
verify_ssl = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
llm-eval-test = "llm_eval_test.__main__:eval_cli"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
